Agregue exportar PDF de la asistencia y details Arregle mi fallido springsecurity Arregle mi fallido isAuthenticated